tests/snapshots/snapshot_receipts__receipt_passthrough_mode_snapshot.snap
---
source: tests/snapshot_receipts.rs
expression: json_str
---
{
  "meta": {
    "run_id": "00000000-0000-4000-8000-000000000001",
    "work_order_id": "00000000-0000-4000-8000-000000000002",
    "contract_version": "abp/v0.1",
    "started_at": "2025-01-15T12:00:00Z",
    "finished_at": "2025-01-15T12:05:00Z",
    "duration_ms": 300000
  },
  "backend": {
    "id": "sidecar:node",
    "backend_version": "1.0.0",
    "adapter_version": "0.1.0"
  },
  "capabilities": {
    "streaming": "native"
  },
  "mode": "passthrough",
  "usage_raw": {
    "completion_tokens": 400,
    "prompt_tokens": 200
  },
  "usage": {
    "input_tokens": 200,
    "output_tokens": 400,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [
    {
      "ts": "2025-01-15T12:00:00Z",
      "type": "run_started",
      "message": "passthrough run",
      "ext": {
        "raw_message": {
          "content": "You are a helpful assistant.",
          "role": "system"
        }
      }
    },
    {
      "ts": "2025-01-15T12:00:00Z",
      "type": "assistant_message",
      "text": "Hello from passthrough!",
      "ext": {
        "raw_message": {
          "content": "Hello from passthrough!",
          "role": "assistant"
        }
      }
    }
  ],
  "artifacts": [],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "complete",
  "receipt_sha256": null
}
