tests/snapshots/snapshot_receipts__receipt_verify_hash_roundtrip.snap
---
source: tests/snapshot_receipts.rs
expression: json_str
---
{
  "meta": {
    "run_id": "00000000-0000-4000-8000-000000000001",
    "work_order_id": "00000000-0000-4000-8000-000000000002",
    "contract_version": "abp/v0.1",
    "started_at": "2025-01-15T12:00:00Z",
    "finished_at": "2025-01-15T12:05:00Z",
    "duration_ms": 300000
  },
  "backend": {
    "id": "sidecar:claude",
    "backend_version": "3.5.0",
    "adapter_version": null
  },
  "capabilities": {
    "streaming": "native",
    "tool_use": "native",
    "extended_thinking": "emulated"
  },
  "mode": "mapped",
  "usage_raw": {},
  "usage": {
    "input_tokens": null,
    "output_tokens": null,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [],
  "artifacts": [],
  "verification": {
    "git_diff": null,
    "git_status": null,
    "harness_ok": false
  },
  "outcome": "complete",
  "receipt_sha256": "a71dd9beab8dbfeefb9073916060e9f0ed359f352bb626c8c39d73a104c95ecf"
}
